--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,5 @@
 // imports layout
 @import 'layout/grid.scss';
 @import 'layout/navigation.scss';
+@import 'layout/jumbotron.scss';
+@import 'layout/three.scss';
