--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,4 @@
 @import 'layout/navigation.scss';
 @import 'layout/jumbotron.scss';
 @import 'layout/three.scss';
+@import 'layout/composants.scss';
