style: composants finish

--- a/sass/layout/jumbotron.scss
+++ b/sass/layout/jumbotron.scss
@@ -3,7 +3,7 @@
   min-height: 580px;
 
   background: linear-gradient(rgba(25, 8, 71, .8), rgba(25, 8, 71, .8)),
-              center / cover no-repeat url(/images/batiment-nf.jpg);
+              fixed center / cover no-repeat url(/images/batiment-nf.jpg);
 }
 
 .jumbotron-logo {
