--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -68,39 +68,39 @@ a {
 
 //color-text CSS
 .text-primary {
-  background-color: $text-primary !important;
+  color: $text-primary !important;
 }
 
 .text-secondary {
-  background-color: $text-secondary !important;
+  color: $text-secondary !important;
 }
 
 .text-success {
-  background-color: $text-success !important;
+  color: $text-success !important;
 }
 
 .text-danger {
-  background-color: $text-danger !important;
+  color: $text-danger !important;
 }
 
 .text-warning {
-  background-color: $text-warning !important;
+  color: $text-warning !important;
 }
 
 .text-info {
-  background-color: $text-info !important;
+  color: $text-info !important;
 }
 
 .text-light {
-  background-color: $text-light !important;
+  color: $text-light !important;
 }
 
 .text-dark {
-  background-color: $text-dark !important;
+  color: $text-dark !important;
 }
 
 .text-white {
-  background-color: $text-white !important;
+  color: $text-white !important;
 }
 
 //fonts
