--- a/sass/layout/three.scss
+++ b/sass/layout/three.scss
@@ -4,6 +4,10 @@
   text-align: center;
 }
 
+.three i {
+  margin-bottom: 20px;
+}
+
 @media only screen and (min-width: 980px) {
   .three-contain {
     display: grid;
