--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,4 +10,5 @@
 @import 'layout/jumbotron.scss';
 @import 'layout/three.scss';
 @import 'layout/composants.scss';
+@import 'layout/header.scss';
 @import 'layout/footer.scss';
