--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,5 +10,6 @@
 @import 'layout/jumbotron.scss';
 @import 'layout/three.scss';
 @import 'layout/composants.scss';
+@import 'layout/description.scss';
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
