--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,11 @@
 @import 'layout/navigation.scss';
 @import 'layout/jumbotron.scss';
 @import 'layout/three.scss';
+@import 'layout/team.scss';
 @import 'layout/composants.scss';
-@import 'layout/description.scss';
+@import 'layout/description-text.scss';
+@import 'layout/description-img-title.scss';
+@import 'layout/desc-medium.scss';
+@import 'layout/desc-big.scss';
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
