--- a/style.css
+++ b/style.css
@@ -149,6 +149,10 @@ a {
   border-radius: 6px;
 }
 
+strong {
+  font-weight: 600;
+}
+
 .btn {
   display: inline-block;
   width: 100%;
@@ -177,6 +181,12 @@ a {
   color: #E1E1E1;
   background: none;
   border: 2px solid #FFF;
+}
+
+.btn-primary:hover {
+  color: #472F88;
+  background: none;
+  border: 2px solid #472F88;
 }
 
 @media only screen and (min-width: 450px) {
@@ -271,6 +281,34 @@ body {
     grid-gap: 40px;
   }
 }
+.team {
+  width: 100%;
+  margin: 50px 0;
+  text-align: center;
+}
+
+.team-img {
+  width: 100%;
+}
+
+.team-name {
+  margin-top: 10px;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+@media only screen and (min-width: 600px) {
+  .container-team {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 50px;
+  }
+}
+@media only screen and (min-width: 870px) {
+  .container-team {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
 .composants-contain {
   margin: 50px 0;
 }
@@ -360,6 +398,80 @@ body {
 @media only screen and (min-width: 750px) {
   .description {
     width: 650px;
+  }
+}
+.description-img-title {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.description-img {
+  width: 90%;
+  margin-top: 20px;
+  background-color: #472F88;
+  border-radius: 6px;
+}
+
+.img-style {
+  width: 100%;
+  margin-top: 15px;
+  margin-left: 15px;
+  border-radius: 6px;
+}
+
+@media only screen and (min-width: 800px) {
+  .description-img-title {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+  }
+
+  .description-img {
+    margin-top: -50px;
+  }
+
+  .description-img-title .title {
+    grid-column: 2;
+  }
+}
+.desc-medium {
+  margin: 60px 0;
+}
+
+.desc-medium-img {
+  width: 100%;
+  margin: 20px 0;
+}
+
+.desc-medium-text {
+  margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 800px) {
+  .container-desc-medium {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 70px;
+  }
+}
+.desc-big {
+  margin: 60px 0;
+}
+
+.desc-big-img {
+  width: 100%;
+  margin: 20px 0;
+}
+
+.desc-big-text {
+  margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 800px) {
+  .container-desc-big {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 50px;
   }
 }
 .header {
