--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,4 +16,5 @@
 @import 'layout/desc-medium.scss';
 @import 'layout/desc-big.scss';
 @import 'layout/header.scss';
+@import 'layout/contact.scss';
 @import 'layout/footer.scss';
